Changed the index page and made the creeertoernooi page.

--- a/front-end/public/css/style.css
+++ b/front-end/public/css/style.css
@@ -57,3 +57,11 @@
     margin-top:5px;
     padding-top:5px;
 }
+
+.homepagelink{
+    color: white;
+}
+
+.homepagelink:hover{
+    color: white;
+}
