Added pages and styling.

--- a/front-end/public/css/style.css
+++ b/front-end/public/css/style.css
@@ -65,3 +65,16 @@
 .homepagelink:hover{
     color: white;
 }
+
+.poules{
+    margin: auto;
+}
+
+.poule-menu{
+    margin: auto;
+    margin-bottom: 10px;
+}
+
+.td{
+    text-align: center;
+}
